--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "rollup-plugin-css-only": "^3.1.0",
     "sirv-cli": "^1.0.0",
     "svelte": "^3.29.0",
-    "svelte-scrollto": "^0.2.0"
+    "svelte-scrollto": "^0.2.0",
+    "svelte-slider": "^1.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
